# sof

./: west.yml
manifests/: sof-ci-jenkins-zephyr-override-template.yml  sof-ci-jenkins.yml
src/arch/host/: CMakeLists.txt
src/include/sof/debug/: panic.h
src/platform/: Kconfig
tools/fuzzer/: topology.c
tools/plugin/: 50-sof.conf  CMakeLists.txt  common.h  conf_sof.c  ctl_sof.c  pcm_sof.c  plugin.c  plugin.h  sof-pipe.c  topology.c
tools/testbench/: topology.c
tools/topology/topology2/cavs/: cavs-nocodec.conf
tools/topology/topology2/include/common/: pin_binding.conf  tokens.conf
tools/topology/topology2/include/components/: copier.conf  widget-common.conf
tools/tplg_parser/: CMakeLists.txt  asrc.c  buffer.c  control.c  dai.c  graph.c  mixer.c  pcm.c  pga.c  process.c  src.c  tokens.c  widget.c
tools/tplg_parser/include/tplg_parser/: tokens.h  topology.h
